# bitsof-datascience

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
bitsof_datascience/bigger_dataset_in_pandas/: README.md  main.py
